<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2016-2025 zafaco GmbH
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Affero General Public License version 3
  ~     as published by the Free Software Foundation.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Affero General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Affero General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.speed.SpeedFragment">

    <LinearLayout
        android:id="@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- ################################################################################### -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_label" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end" />

        </LinearLayout>

        <!-- ################################################################################### -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rtt_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rtt_label" />

            <TextView
                android:id="@+id/rtt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end" />
        </LinearLayout>


        <!-- ################################################################################### -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/download_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_label" />

            <TextView
                android:id="@+id/download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end" />
        </LinearLayout>

        <!-- ################################################################################### -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/upload_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_label" />

            <TextView
                android:id="@+id/upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/dividerResultsConfig"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginVertical="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultLayout" />


    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerResultsConfig">

        <!-- ##################################################################### -->

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/stop_label"
            android:textSize="12sp" />


        <!-- ##################################################################### -->

    </LinearLayout>

    <ScrollView
        android:id="@+id/resultScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startLayout">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>